--- a/api-admin/src/main/resources/application-dev.properties
+++ b/api-admin/src/main/resources/application-dev.properties
@@ -1,7 +1,7 @@
 # 本地环境
 
 server.port=9998
-spring.datasource.url=jdbc:postgresql://172.16.48.162/amisdb
+spring.datasource.url=jdbc:postgresql://172.16.3.23/CRM
 spring.datasource.username=uamis
 spring.datasource.password=sun.japan
 server.servlet.context-path=
